--- a/SELLstyles.css
+++ b/SELLstyles.css
@@ -70,6 +70,7 @@ body, html {
 
 .navbar__links:hover { color: var(--color-accent); }
 .navbar__links.active { color: var(--color-accent); border-bottom-color: var(--color-accent); }
+.navbar__menu:hover .navbar__links.active:not(:hover) { color: rgba(255,255,255,0.9); border-bottom-color: transparent; }
 
 .navbar__btn { display: flex; justify-content: center; align-items: center; padding-left: 12px; }
 
